# CG_Engine

./: .gitignore  CG_Engine.sln  CG_EngineConfig.cmake  CMakeLists.txt  CMakeSettings.json  Makefile  Readme.txt
CG_Engine/: CG_Data.cpp  CG_Data.h  CG_Engine.cpp  CG_Engine.h  CG_Engine.vcxproj  CG_Engine.vcxproj.filters  Camera.cpp  Camera.h  CgTime.cpp  Common.h  Cubemap.cpp  Cubemap.h  Entity.cpp  Entity.h  File_IO.cpp  File_IO.h  GUI.cpp  GUI.h  InputHandler.cpp  ModelLoader.cpp  ModelLoader.h  ParticleSystem.cpp  ParticleSystem.h  PostProcessing.cpp  PostProcessing.h  PostprocessingF.glsl  PostprocessingV.glsl  ProjectionMapping.cpp  ProjectionMapping.h  Properties.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  Time.cpp  Time.h  Utilities.h  Water.cpp  (+2 more)
CG_Engine/res/: DefaultCausticF.glsl  DefaultCausticV.glsl  WaterShaderF.glsl  WaterShaderV.glsl
include/: CG_Data.h  Camera.h  Common.h  Entity.h  InputHandler.h  ModelLoader.h  OpenXrComponent.h  ParticleSystemFShader.glsl  ParticleSystemVShader.glsl  ProjectionMapping.h  Shader.h  Water.h  glad.h
include/CG_Engine/: AssimpAdapters.h  CG_Assert.h  CG_Data.h  CG_Engine.h  CG_Instance.h  Camera.h  CgTime.h  Common.h  CoordinateVisualiser.h  Cubemap.h  Entity.h  File_IO.h  GUI.h  GlfwComponent.h  IComponent.h  IRenderable.h  InputHandler.h  InternalObj.h  Log.h  MaterialData.h  ModelLoader.h  OpenGlComponent.h  OpenXrComponent.h  ParticleSystem.h  PostProcessing.h  PostprocessingF.glsl  ProjectionMapping.h  Properties.h  Renderer.h  ScopedToken.h  Shader.h  Terrain.h  Utilities.h  Water.h
include/glad/: glad.h
libs/: assimp_x64.lib  assimp_x86.lib  glfw-3.2.1_x64.lib  glfw-3.2.1_x86.lib  glfw-3.2.1d_x64.lib  glfw-3.2.1d_x86.lib
libs13/: GLFW-3.2.1_x64.lib  GLFW-3.2.1_x86.lib  GLFW-3.2.1d_x64.lib  GLFW-3.2.1d_x86.lib
src/: CG_Data.cpp  CG_Engine.cpp  Camera.cpp  CoordinateVisualiser.cpp  Cubemap.cpp  Entity.cpp  File_IO.cpp  GUI.cpp  ModelLoader.cpp  OpenXrComponent.cpp  ParticleSystem.cpp  PostProcessing.cpp  ProjectionMapping.cpp  Renderer.cpp  Shader.cpp  Terrain.cpp  Utilities.cpp  Water.cpp  glad.c
src/res/: DefaultCausticF.glsl  DefaultCausticV.glsl  PhongShaderF.glsl  PhongShaderTexturedF.glsl  PhongShaderTexturedV.glsl  PhongShaderV.glsl  WaterShaderF.glsl  WaterShaderV.glsl
